# cs-agent

./: .coderabbit.yaml  .gitignore  README.md  app.py  langgraph.json  pyproject.toml  requirements.txt  vercel.json
resources/location/: Kelantan.md
resources/locations/: Kuala Lumpur.md  Melaka.md  Negeri Sembilan.md  Not Available.md  Pahang.md  Penang.md  Sarawak.md  Selangor.md  Terengganu.md
resources/products/: man_en.md
resources/prompts/: cs_prompt_en.md  location_prompt_en.md  pm_prompt_en.md  supervisor_prompt_en.md
src/: index.py  test_endpoint.py
src/api/: main.py  test_endpoint.py
src/csagent/: configuration.py  graph.py  nodes.py  state.py  utils.py
src/csagent/location/: graph.py  nodes.py  state.py
src/csagent/location/resources/locations/: Genting.md  Johor.md  Jonker Street.md  Kuala Lumpur.md  Langkawi.md  Melaka.md
src/csagent/product/: graph.py  nodes.py  state.py  utils.py
src/csagent/profile/: graph.py  nodes.py  state.py
src/csagent/react_agent/: graph.py
src/csagent/resources/locations/: KLIA.md  Kedah.md  Perak.md  Sabah.md
src/csagent/resources/products/: man.md  spiritI.md  spiritII.md  violet.md
src/csagent/resources/prompts/: pm_prompt.md  react_prompt.md
src/csagent/router_agent/: graph.py  nodes.py  state.py
src/csagent/supervisor/: graph.py  nodes.py  state.py
src/csagent/voice_agent/: GeminiAudioSession.py  gemini_live_api.py  gemini_live_nativeaudio.py
src/eval/: 1. create_langsmith_dataset.py  create_langsmith_dataset.ipynb  data.json  dataset.json  eval.ipynb  test_dataset.json  utils.py
(+15 files in other folders)
