[project]
name = "csagent"
version = "0.1.0"
description = "Customer Service Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.3",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["csagent"]

[tool.setuptools.package-dir]
"csagent" = "src/csagent"

[dependency-groups]
dev = [
    "langgraph-api>=0.2.120",
    "langgraph-cli>=0.3.6",
]
