[project]
name = "csagent"
version = "0.1.0"
description = "Customer Service Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.0",
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.2",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["csagent"]

[tool.setuptools.package-dir]
"csagent" = "src/csagent"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "langgraph-api>=0.6.11",
    "langgraph-cli>=0.4.11",
    "pytest>=9.0.2",
]
